--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.0",
     "mongoose": "^6.8.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,6 +45,7 @@
     "@types/jest": "28.1.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
